# ELM

./: .gitignore  AGENT.md  AGENTS.md  README.md  pyproject.toml
scripts/: analyze.sh  chat.sh  count_params.sh  erb_minimal.py  eval.sh  eval2.sh  eval3.sh  eval4.sh  run_erb.sh  run_tests.sh  st_mem_full_training.sh  train.sh  train2.sh
src/: count_params.py  count_tokens.py  main_analyze_results.py  main_chat.py  main_count_params.py  main_evaluator.py  main_trainer.py
src/configs/: config.py  constants.py
src/dataloaders/: build_dataloader.py  dataset_mixer.py
src/dataloaders/data_representation/: base.py  rgb.py  signal.py  stacked_signal.py  symbolic.py
src/dataloaders/data_representation/bpe/: ecg_byte.py
src/dataloaders/system_prompts/: system_prompt_bc_ecg_flat.txt  system_prompt_bc_ecg_noise.txt  system_prompt_bc_noise_flat.txt  system_prompt_ecg_bc.txt  system_prompt_ecg_mc.txt
src/elms/: build_elm.py  build_encoder.py  build_llm.py  connect_nns.py  opentslm_wrapper.py
src/elms/connectors/: cnn_patch_proj.py  linear_proj.py  mlp_proj.py  patch_proj.py
src/elms/ecg_encoders/merl/: merl.py
src/elms/llm_encoders/: base_elf.py  fuyu.py  llava.py
src/optimizers/: optimizer_setup.py
src/rl/: common_funcs.py  losses.py  rewards.py  rl_loss.py  rollout.py
src/rl/sapo/: sapo_loss.py
src/runners/: evaluator.py  helper.py  rl_trainer.py  trainer.py
src/utils/: chat_template_manager.py  checkpoint_manager.py  dir_file_manager.py  gpu_manager.py  time_manager.py  viz_manager.py  wandb_manager.py
tests/: test_rl_sapo.py  test_transformers.py
(+9 files in other folders)
